# ricky

./: .buildinfo  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  ricky.html  search.html  searchindex.js  setup.cfg  setup.py  snowfake.html
.doctrees/: environment.pickle  index.doctree  readme.doctree  ricky.doctree  snowfake.doctree
_modules/: index.html
_modules/snowfake/: snowfake.html
_sources/: index.rst.txt  ricky.rst.txt
docs/: conf.py  index.rst
docs/notebooks/: proof_of_concept.ipynb
ricky/: __init__.py  io.py  wavelets.py  xarray.py
tests/: test_ricky.py
